# GstTutorial

./: .gitmodules  GstTutorial.doap  Makefile.am  README.md  autogen.sh  configure.ac
po/: Makevars
src_c/: Makefile.am  main.c
src_c/01.HelloWorld/: 01.HelloWorld.c  Makefile.am  README.md
src_c/02.GStreamerConcepts/: 02.GStreamerConcepts.c  Makefile.am  README.md
src_c/03.TestElement/: Makefile.am  gstfakeadec.c  gstfakeadec.h  gstfdcaps.h  plugin.c
src_py/01.HelloWorld/: 01.HelloWorld.py
src_py/02.GStreamerConcepts/: 02.GStreamerConcepts.py
src_py/03.SimplePlayer/: 03.SimplePlayer.py
src_py/04.RichPlayer/: 04.RichPlayer.py
tests/: Makefile.am
tests/check/: Makefile.am
tests/check/elements/: fakeadec.c
tests/examples/: Makefile.am
tests/examples/fakeadec/: Makefile.am  fakeadec-playbin.c
