bin_PROGRAMS = 01_HelloWorld-@GST_API_VERSION@

noinst_PROGRAMS = 01_HelloWorld-@GST_API_VERSION@-debug

bin_SCRIPTS =

AM_CFLAGS = $(GST_ALL_CFLAGS) $(GST_PBUTILS_CFLAGS) $(GST_VIDEO_CFLAGS)
LDADD = $(GST_PBUTILS_LIBS) $(GST_LIBS) $(GST_VIDEO_LIBS)

01_HelloWorld_@GST_API_VERSION@_SOURCES = 01.HelloWorld.c
01_HelloWorld_@GST_API_VERSION@_CFLAGS = $(GIO_CFLAGS) $(AM_CFLAGS)
01_HelloWorld_@GST_API_VERSION@_LDADD = $(GIO_LIBS) $(LDADD)

01_HelloWorld_@GST_API_VERSION@_debug_SOURCES = 01.HelloWorld.c
01_HelloWorld_@GST_API_VERSION@_debug_CFLAGS = $(GIO_CFLAGS) $(AM_CFLAGS)
01_HelloWorld_@GST_API_VERSION@_debug_LDADD = $(GIO_LIBS) $(LDADD)
01_HelloWorld_@GST_API_VERSION@_debug_LDFLAGS = -no-install

